@@ -27,15 +27,12 @@
 plugins {
     id("com.google.cloud.tools.jib")
 }
-
 val toImageRepo = System.getProperty("to.image.repo")
 val toImageTag = System.getProperty("to.image.tag")
 var toImage = System.getProperty("jib.to.image")
-
 // 加这个判断 , 主要是为了编译kts时不报错
 if (toImage.isNullOrBlank() || (toImageRepo.isNullOrBlank() && toImageTag.isNullOrBlank())) {
     val service = name.replace("boot-", "").replace("-tencent", "")
-
     if (toImage.isNullOrBlank() && !toImageRepo.isNullOrBlank()) {
         toImage = toImageRepo.let {
             if (toImageRepo.endsWith("/")) it else it + "/"
@@ -44,13 +41,12 @@ if (toImage.isNullOrBlank() || (toImageRepo.isNullOrBlank() && toImageTag.isNull
 
     val jvmFlagList = System.getProperty("jvmFlags.file")?.let { File(it).readLines() } ?: emptyList()
 
+    val watchAllNamespace = System.getProperty("watch.all.namespace", "true")
+
     val finalJvmFlags = mutableListOf(
         "-server",
         "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8080",
-        "-Xloggc:/data/workspace/$service/jvm/gc-%t.log",
-        "-XX:+PrintTenuringDistribution",
-        "-XX:+PrintGCDetails",
-        "-XX:+PrintGCDateStamps",
+        "-Xlog:gc*,gc+age=trace:file=/data/workspace/$service/jvm/gc-%t.log:time,level,tags",
         "-XX:MaxGCPauseMillis=100",
         "-XX:+UseG1GC",
         "-XX:NativeMemoryTracking=summary",
@@ -73,13 +69,12 @@ if (toImage.isNullOrBlank() || (toImageRepo.isNullOrBlank() && toImageTag.isNull
         "-Dspring.main.allow-circular-references=true",
         "-Dspring.cloud.kubernetes.config.sources[0].name=config-bk-ci-common",
         "-Dspring.cloud.kubernetes.config.sources[1].name=config-bk-ci-$service",
-        "-Dspring.cloud.kubernetes.discovery.all-namespaces=true",
+        "-Dspring.cloud.kubernetes.discovery.all-namespaces=$watchAllNamespace",
         "-Dspring.cloud.kubernetes.config.includeProfileSpecificSources=false",
         "-Dio.undertow.legacy.cookie.ALLOW_HTTP_SEPARATORS_IN_V0=true",
         "-Dserver.port=80"
     )
     finalJvmFlags.addAll(jvmFlagList)
-
     jib {
         // 环境变量
         container {
